2015-03-31  Mark Wielaard  <mjw@redhat.com>

       * core-file.c (core_file_read_eagerly): Special case small images.

2015-01-26  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_symtab): Explicitly clear symdata,
	syments and first_global on elferr before calling find_dynsym.

2014-12-27  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getsrc.c (dwfl_module_getsrc): Never match a line that
	has end_sequence set.

2015-01-04  Mark Wielaard  <mjw@redhat.com>

	* cu.c (intern_cu): Store result and return directly when finding
	EOF marker.
	(__libdwfl_nextcu): Check *nextp as returned by intern_cu isn't -1.

2014-12-19  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_symtab): Always try find_dynsym last.

2014-12-19  Mark Wielaard  <mjw@redhat.com>

	* elf-from-memory.c (handle_segment): Remove palign sanity check.

2014-12-18  Mark Wielaard  <mjw@redhat.com>

	* relocate.c (resolve_symbol): Make sure symstrdata->d_buf != NULL.

2014-12-13  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_dynsym): elf_getdata_rawchunk takes
	a size_t, make sure it doesn't overflow.

2014-12-13  Mark Wielaard  <mjw@redhat.com>

	* cu.c (cudie_offset): Make sure Dwarf_Off difference doesn't
	wrap around before returning as int.

2014-12-11  Josh Stone  <jistone@redhat.com>

	* dwfl_module_getsrc.c (dwfl_module_getsrc): Return the *last* line
	record <= addr, rather than returning immediately on matches.

2014-12-09  Mark Wielaard  <mjw@redhat.com>

	* dwfl_segment_report_module.c (handle_file_note): Check count doesn't
	overflow.

2014-12-07  Mark Wielaard  <mjw@redhat.com>

	* relocate.c (relocate_section): Sanity check section overlap against
	actually used ehsize, shentsize and phentsize.

2014-12-07  Mark Wielaard  <mjw@redhat.com>

	* offline.c (dwfl_offline_section_address): Assert shndx is not zero.
	* relocate.c (__libdwfl_relocate_value): Don't relocate against
	section zero.

2014-11-29  Mark Wielaard  <mjw@redhat.com>
